@@ -4,6 +4,7 @@
     - Add perltidyrc and run over all perl files.
     - Add perlcritic test & fix errors
     - Add Test::Spelling and fix all spelling errors in POD. RT #89165
+    - Reorder jobs when prioritize is set. RT #99075
 
 1.10 (2010-03-15)
     - Add $job->declined method for workers to be able to decline handling
